Shity Bugs Fixed

--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<!doctype html>
+<html lang="ar" dir="rtl" style="color-scheme: light dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/build/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="light dark" />
     <title>CodeLIMS - نظام إدارة الحسابات والمبيعات</title>
+    <meta name="description" content="نظام محاسبة ونقاط بيع متقدم مع إدارة الأقساط" />
   </head>
   <body>
     <div id="app"></div>
